--- a/manifest.json
+++ b/manifest.json
@@ -3,16 +3,19 @@
     "scope": "/",
     "name": "海之声-VoicesFromTheSea",
     "short_name": "海之声",
-    "icons": [{
-        "src": "icon.png",
-        "sizes": "435x435",
-        "type": "image/png"
-      }],
+    "icons": [
+        {
+            "src": "icon.png",
+            "sizes": "435x435",
+            "type": "image/png"
+        }
+    ],
     "start_url": "/index.html",
     "display": "standalone",
+    "id": "/index.html",
     "lang": "cn",
     "orientation": "portrait",
     "background_color": "#46B0EC",
     "theme_color": "#46B0EC",
     "description": "海之声基于Ruffle的在线移植版"
-  }
+}
